--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Power Auto - Accueil</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <header>
+    <div class="logo">⚡ Power Auto</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.com" class="active">Accueil</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="panier.html">Panier</a></li>
+        <li><a href="apropos.html">À propos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Bienvenue chez Power Auto</h1>
+      <p>Votre partenaire de confiance pour les pièces et accessoires automobiles de qualité.</p>
+      <a href="boutique.html" class="btn">Découvrir la boutique</a>
+    </div>
+  </section>
+  
+  <footer>
+    <div class="footer-content">
+      <p>© 2025 Power Auto. Tous droits réservés.</p>
+      <p><a href="#">Mentions légales</a> | <a href="#">Politique de confidentialité</a></p>
+    </div>
+  </footer>
+
+</body>
+</html>
 
