--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
 </head>
 <body>
 
-  <header>
-    <div class="logo">⚡ Power Auto</div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.com" class="active">Accueil</a></li>
-        <li><a href="boutique.html">Boutique</a></li>
-        <li><a href="panier.html">Panier</a></li>
-        <li><a href="apropos.html">À propos</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <div class="logo">⚡ Power Auto</div>
+
+  <input type="checkbox" id="burger-toggle">
+
+  <label for="burger-toggle" class="burger" aria-label="Menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+
+  <nav class="nav-menu">
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="boutique.html">Boutique</a></li>
+      <li><a href="panier.html">Panier</a></li>
+      <li><a href="apropos.html">À propos</a></li>
+    </ul>
+  </nav>
+</header>
+
+
 
   <section class="hero">
     <div class="hero-content">
@@ -37,4 +48,3 @@
 
 </body>
 </html>
-
