--- a/boutique.html
+++ b/boutique.html
@@ -3,22 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Power Auto - Accueil</title>
+  <title>Power Auto - Boutique</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
   <div class="logo">⚡ Power Auto</div>
-
-  <input type="checkbox" id="burger-toggle">
-
-  <label for="burger-toggle" class="burger" aria-label="Menu">
-    <span></span>
-    <span></span>
-    <span></span>
-  </label>
-
   <nav class="nav-menu">
     <ul class="nav-links">
       <li><a href="index.html">Accueil</a></li>
@@ -29,13 +20,97 @@
   </nav>
 </header>
 
+<main>
+  
+  <section class="shop-hero">
+    <h1>Pièces Performance</h1>
+    <p>
+      Découvrez notre sélection exclusive de pièces hautes performances conçues pour sublimer les voitures les plus sportives. 
+      Chaque produit est choisi pour sa qualité, son efficacité et son design, afin d’offrir à votre moteur, votre freinage et 
+      votre châssis le meilleur de la technologie automobile. Poussez les limites, vivez la puissance.
+    </p>
+  </section>
 
-  <footer>
-    <div class="footer-content">
-      <p>© 2025 Power Auto. Tous droits réservés.</p>
-      <p><a href="#">Mentions légales</a> | <a href="#">Politique de confidentialité</a></p>
+  <section class="filters">
+    <h2 class="visually-hidden">Filtres produits</h2>
+    <div class="filter-group">
+      <label for="category">Catégorie :</label>
+      <select id="category">
+        <option value="">Choisir une catégorie</option>
+        <option value="moteur">Moteur</option>
+        <option value="freinage">Freinage</option>
+        <option value="carrosserie">Carrosserie</option>
+        <option value="echappement">Échappement</option>
+      </select>
     </div>
-  </footer>
 
+    <div class="filter-group">
+      <label for="model">Modèle :</label>
+      <select id="model" disabled>
+        <option value="">Choisir un modèle</option>
+      </select>
+    </div>
+  </section>
+
+  <section class="shop-container" id="products">
+    <h2 class="visually-hidden">Liste des produits</h2>
+  </section>
+
+  <section class="shop-placeholder" id="placeholder">
+    <h2>🔧 Bienvenue dans la boutique Power Auto</h2>
+    <p>Sélectionnez une catégorie et un modèle pour découvrir nos pièces haute performance adaptées à votre véhicule.</p>
+  </section>
+
+  <div class="products-container" id="products-container"></div>
+</main>
+
+<footer>
+  <div class="footer-container">
+
+    <div class="footer-logo">
+      ⚡ <span>Power Auto</span>
+    </div>
+
+    <nav class="footer-nav">
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="panier.html">Panier</a></li>
+        <li><a href="apropos.html">À propos</a></li>
+      </ul>
+    </nav>
+
+    <div class="footer-links">
+      <a href="#">Mentions légales</a>
+      <a href="#">Politique de confidentialité</a>
+    </div>
+
+    <div class="footer-socials">
+      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+      <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+    </div>
+
+    <p class="footer-credit">© 2025 Power Auto — Conçu par <strong>Mehdi Menasria</strong></p>
+
+  </div>
+</footer>
+
+<!-- Import des icônes Font Awesome -->
+<script src="https://kit.fontawesome.com/a2b0d6f0c8.js" crossorigin="anonymous"></script>
+
+<!-- Fenêtre modale pour les détails produit -->
+<div id="product-modal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <img id="modal-img" src="placeholder.png" alt="Image du produit">
+    <h2 id="modal-title">Détails du produit</h2>
+    <p id="modal-desc"></p>
+    <div id="modal-price"></div>
+    <a href="panier.html" class="btn add-cart">Ajouter au panier</a>
+  </div>
+</div>
+
+<script src="boutique.js"></script>
 </body>
 </html>
