--- a/index.html
+++ b/index.html
@@ -39,12 +39,30 @@
     </div>
   </section>
   
-  <footer>
-    <div class="footer-content">
-      <p>© 2025 Power Auto. Tous droits réservés.</p>
-      <p><a href="#">Mentions légales</a> | <a href="#">Politique de confidentialité</a></p>
+<footer>
+  <div class="footer-container">
+
+    <div class="footer-logo">
+      ⚡ <span>Power Auto</span>
     </div>
-  </footer>
+
+    <nav class="footer-nav">
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="panier.html">Panier</a></li>
+        <li><a href="apropos.html">À propos</a></li>
+      </ul>
+    </nav>
+
+    <div class="footer-links">
+      <a href="#">Mentions légales</a>
+      <a href="#">Politique de confidentialité</a>
+    </div>
+    <p class="footer-credit">© 2025 Power Auto — Conçu par <strong>Ayoub KEBIR</strong></p>
+
+  </div>
+</footer>
 
 </body>
 </html>
