--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
   </nav>
 </header>
 
+<section class="hero">
+  <video autoplay muted loop playsinline class="hero-video">
+    <source src="video_voiture3.mp4" type="video/mp4">
+    Votre navigateur ne supporte pas la vidéo en arrière-plan.
+  </video>
 
+  <div class="hero-overlay"></div>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Bienvenue chez Power Auto</h1>
-      <p>Votre partenaire de confiance pour les pièces et accessoires automobiles de qualité.</p>
-      <a href="boutique.html" class="btn">Découvrir la boutique</a>
-    </div>
-  </section>
+  <div class="hero-content">
+    <h1>Bienvenue chez Power Auto</h1>
+    <p>Votre partenaire de confiance pour les pièces et accessoires automobiles de qualité.</p>
+    <a href="boutique.html" class="btn">Découvrir la boutique</a>
+  </div>
+</section>
   
 <footer>
   <div class="footer-container">
@@ -63,6 +68,7 @@
 
   </div>
 </footer>
+
 
 </body>
 </html>
