--- a/boutique.html
+++ b/boutique.html
@@ -10,10 +10,19 @@
 
 <header>
   <div class="logo">⚡ Power Auto</div>
+
+  <input type="checkbox" id="burger-toggle">
+
+  <label for="burger-toggle" class="burger" aria-label="Menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+
   <nav class="nav-menu">
     <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="boutique.html" class="active">Boutique</a></li>
+      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="boutique.html">Boutique</a></li>
       <li><a href="panier.html">Panier</a></li>
       <li><a href="apropos.html">À propos</a></li>
     </ul>
