--- a/panier.html
+++ b/panier.html
@@ -21,9 +21,9 @@
 
   <nav class="nav-menu">
     <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
+      <li><a href="index.html" class="active">Accueil</a></li>
       <li><a href="boutique.html">Boutique</a></li>
-      <li><a href="panier.html" class="active">Panier</a></li>
+      <li><a href="panier.html">Panier</a></li>
       <li><a href="apropos.html">À propos</a></li>
     </ul>
   </nav>
@@ -49,18 +49,11 @@
       <a href="#">Mentions légales</a>
       <a href="#">Politique de confidentialité</a>
     </div>
-
-    <div class="footer-socials">
-      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-      <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-    </div>
-
-    <p class="footer-credit">© 2025 Power Auto — Conçu par <strong>Mehdi Menasria</strong></p>
+    <p class="footer-credit">© 2025 Power Auto — Conçu par <strong>Zacharia MEHIDI</strong></p>
 
   </div>
 </footer>
 
+
 </body>
 </html>
-
