--- a/boutique.html
+++ b/boutique.html
@@ -5,18 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Power Auto - Boutique</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300..800&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="logoSite.ico">
 </head>
 <body>
 
-<header>
-  <div class="logo">⚡ Power Auto</div>
+<header class="site-header">
+  <div class="logo">
+    <img src="logoSite.png" alt="Logo Power Auto">
+    <span class="brand-name">Power Auto</span>
+  </div>
 
-  <input type="checkbox" id="burger-toggle">
-
+  <input type="checkbox" id="burger-toggle" />
   <label for="burger-toggle" class="burger" aria-label="Menu">
-    <span></span>
-    <span></span>
-    <span></span>
+    <span></span><span></span><span></span>
   </label>
 
   <nav class="nav-menu">
