--- a/boutique.html
+++ b/boutique.html
@@ -14,7 +14,9 @@
 
 <header class="site-header">
   <div class="logo">
-    <img src="logoSite.png" alt="Logo Power Auto">
+    <a href="index.html">
+      <img src="logoSite.png" alt="Logo Power Auto">
+    </a>
     <span class="brand-name">Power Auto</span>
   </div>
 
@@ -25,8 +27,8 @@
 
   <nav class="nav-menu">
     <ul class="nav-links">
-      <li><a href="index.html" class="active">Accueil</a></li>
-      <li><a href="boutique.html">Boutique</a></li>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="boutique.html" class="active">Boutique</a></li>
       <li><a href="panier.html">Panier</a></li>
       <li><a href="apropos.html">À propos</a></li>
     </ul>
@@ -81,7 +83,7 @@
   <div class="footer-container">
 
     <div class="footer-logo">
-      ⚡ <span>Power Auto</span>
+       <span>Power Auto</span>
     </div>
 
     <nav class="footer-nav">
@@ -97,7 +99,7 @@
       <a href="#">Mentions légales</a>
       <a href="#">Politique de confidentialité</a>
     </div>
-    <p class="footer-credit">© 2025 Power Auto — Conçu par <strong>Mehdi Menasria</strong></p>
+    <p class="footer-credit">© 2025 Power Auto — Conçu par <strong>Mehdi MENASRIA</strong></p>
 
   </div>
 </footer>
