--- a/panier.html
+++ b/panier.html
@@ -14,7 +14,9 @@
 
 <header class="site-header">
   <div class="logo">
-    <img src="logoSite.png" alt="Logo Power Auto">
+    <a href="index.html">
+      <img src="logoSite.png" alt="Logo Power Auto">
+    </a>
     <span class="brand-name">Power Auto</span>
   </div>
 
@@ -25,18 +27,19 @@
 
   <nav class="nav-menu">
     <ul class="nav-links">
-      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="index.html">Accueil</a></li>
       <li><a href="boutique.html">Boutique</a></li>
-      <li><a href="panier.html">Panier</a></li>
+      <li><a href="panier.html" class="active">Panier</a></li>
       <li><a href="apropos.html">À propos</a></li>
     </ul>
   </nav>
 </header>
+
 <footer>
   <div class="footer-container">
 
     <div class="footer-logo">
-      ⚡ <span>Power Auto</span>
+       <span>Power Auto</span>
     </div>
 
     <nav class="footer-nav">
