--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 
 
-<body>
 <header class="site-header">
   <div class="logo">
-    <img src="logoSite.png" alt="Logo Power Auto">
+    <a href="index.html">
+      <img src="logoSite.png" alt="Logo Power Auto">
+    </a>
     <span class="brand-name">Power Auto</span>
   </div>
 
