--- a/boutique.html
+++ b/boutique.html
@@ -111,7 +111,7 @@
     <h2 id="modal-title">Détails du produit</h2>
     <p id="modal-desc"></p>
     <div id="modal-price"></div>
-    <a href="panier.html" class="btn add-cart">Ajouter au panier</a>
+    <a href="#" class="btn add-cart">Ajouter au panier</a>
   </div>
 </div>
 
