--- a/boutique.html
+++ b/boutique.html
@@ -38,12 +38,18 @@
 <main>
   
   <section class="shop-hero">
-    <h1>Pièces Performance</h1>
+      <div class="shop-hero-bg">
+    <img src="https://img3.wallspic.com/previews/0/1/4/6/4/146410/146410-ciel-voiture_tuning-voiture_de_luxe_personnels-leclairage_automobile-voiture_de_taille_moyenne-x750.jpg" alt="Voiture sportive de nuit">
+  </div>
+
+  <div class="shop-hero-content">
+    <h1>PIÈCES PERFORMANCE</h1>
     <p>
-      Découvrez notre sélection exclusive de pièces hautes performances conçues pour sublimer les voitures les plus sportives. 
-      Chaque produit est choisi pour sa qualité, son efficacité et son design, afin d’offrir à votre moteur, votre freinage et 
+      Découvrez notre sélection exclusive de pièces hautes performances conçues pour sublimer les voitures les plus sportives.
+      Chaque produit est choisi pour sa qualité, son efficacité et son design, afin d’offrir à votre moteur, votre freinage et
       votre châssis le meilleur de la technologie automobile. Poussez les limites, vivez la puissance.
     </p>
+  </div>
   </section>
 
   <section class="filters">
