--- a/panier.html
+++ b/panier.html
@@ -35,6 +35,18 @@
   </nav>
 </header>
 
+
+  <section class="shop-hero">
+    <h1>Pièces Performance</h1>
+    <p>
+      Découvrez notre sélection exclusive de pièces hautes performances conçues pour sublimer les voitures les plus sportives. 
+      Chaque produit est choisi pour sa qualité, son efficacité et son design, afin d’offrir à votre moteur, votre freinage et 
+      votre châssis le meilleur de la technologie automobile. Poussez les limites, vivez la puissance.
+    </p>
+  </section>
+
+
+ #Footer 
 <footer>
   <div class="footer-container">
 
