--- a/boutique.html
+++ b/boutique.html
@@ -39,7 +39,7 @@
   
   <section class="shop-hero">
       <div class="shop-hero-bg">
-    <img src="https://img3.wallspic.com/previews/0/1/4/6/4/146410/146410-ciel-voiture_tuning-voiture_de_luxe_personnels-leclairage_automobile-voiture_de_taille_moyenne-x750.jpg" alt="Voiture sportive de nuit">
+    <img src="BoutiqueFond.jpg">
   </div>
 
   <div class="shop-hero-content">
@@ -124,3 +124,4 @@
 <script src="boutique.js"></script>
 </body>
 </html>
+
