--- a/panier.html
+++ b/panier.html
@@ -36,65 +36,53 @@
 </header>
 
 
-<!-- Bloc blanc du panier -->
-<div style="background-color:white; border-radius:20px; padding:30px; width:900px; margin:auto; box-shadow:0 0 15px rgba(0,0,0,0.1);">
+<div class="panier">
 
-  <!-- Ligne produit -->
-  <div style="display:flex; align-items:center; border-bottom:1px solid #eee; padding-bottom:20px;">
+  <div class="ligne-produit">
+    <img src="https://via.placeholder.com/100x100.png?text=T-Shirt" alt="Produit" class="image-produit">
 
-    <!-- Image -->
-    <img src="https://via.placeholder.com/100x100.png?text=T-Shirt" alt="Produit" style="width:80px; height:80px; border-radius:8px; object-fit:cover;">
-
-    <!-- Infos produit -->
-    <div style="margin-left:20px; flex:1;">
-      <div style="font-weight:bold; color:#333;">
+    <div class="infos-produit">
+      <div class="nom-produit">
         Shifttech T-SHIRT BLANC MANCHES COURTES MUSTARD DIJON - UNISEXE - S
       </div>
-      <div style="font-size:14px; color:gray; margin-top:5px;">Vêtements</div>
+      <div class="categorie-produit">Vêtements</div>
     </div>
 
-    <!-- Compatibilité -->
-    <div style="color:gray; width:60px; text-align:center;">N/A</div>
+    <div class="compatibilite">N/A</div>
 
-    <!-- Quantité -->
-    <div style="display:flex; align-items:center; justify-content:center; width:100px;">
-      <button style="border:1px solid #ccc; background:none; padding:3px 8px;">-</button>
-      <span style="margin:0 10px; font-weight:bold;">02</span>
-      <button style="border:1px solid #ccc; background:none; padding:3px 8px;">+</button>
+    <div class="quantite">
+      <button class="moins">-</button>
+      <span class="valeur">02</span>
+      <button class="plus">+</button>
     </div>
 
-    <!-- Prix -->
-    <div style="width:80px; text-align:right; font-weight:bold;">60,00 €</div>
+    <div class="prix">60,00 €</div>
 
-    <!-- Supprimer -->
-    <button style="margin-left:15px; border:none; background:none; font-size:20px; color:gray; cursor:pointer;">×</button>
+    <button class="supprimer">×</button>
   </div>
 
-  <!-- Bas du panier -->
-  <div style="display:flex; justify-content:space-between; align-items:center; margin-top:30px;">
-    <div style="color:#333;">
-      <span style="color:red; font-size:20px;">🚗</span>
+  <div class="bas-panier">
+    <div class="config-vehicule">
+      <span class="icone">🚗</span>
       Configurer votre véhicule
     </div>
 
-    <div style="text-align:right;">
-      <div style="color:gray; font-size:14px;">Calculé à l'étape de paiement</div>
-      <div style="font-size:20px; font-weight:bold; margin-top:5px;">60,00 € <span style="font-size:14px; color:gray;">TTC</span></div>
+    <div class="total">
+      <div class="texte-calcul">Calculé à l'étape de paiement</div>
+      <div class="montant">60,00 € <span class="ttc">TTC</span></div>
     </div>
   </div>
 
-  <!-- Bouton -->
-  <div style="text-align:right; margin-top:30px;">
-    <button style="background-color:red; color:white; border:none; border-radius:40px; padding:12px 25px; font-weight:bold; cursor:pointer;">
-      Aller à l'étape de paiement
-    </button>
+  <div class="actions">
+    <button class="payer">Aller à l'étape de paiement</button>
   </div>
 
 </div>
 
 
 
- #Footer 
+
+<!--Footer-->
 <footer>
   <div class="footer-container">
 
