--- a/panier.html
+++ b/panier.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="total">
-      <div class="texte-calcul">Calculé à l'étape de paiement</div>
+      <div class="texte-calcul">Calculé à l'étape de paiemen test t</div>
       <div class="montant">60,00 € <span class="ttc">TTC</span></div>
     </div>
   </div>
