--- a/panier.html
+++ b/panier.html
@@ -31,6 +31,7 @@
       <li><a href="boutique.html">Boutique</a></li>
       <li><a href="panier.html" class="active">Panier</a></li>
       <li><a href="apropos.html">À propos</a></li>
+      <a>test</a>
     </ul>
   </nav>
 </header>
