--- a/panier.html
+++ b/panier.html
@@ -36,20 +36,21 @@
   </nav>
 </header>
 
+<!--Ici-->
 
 <div class="panier">
 
   <div class="ligne-produit">
-    <img src="https://via.placeholder.com/100x100.png?text=T-Shirt" alt="Produit" class="image-produit">
+    <img src="Dodge.png" alt="Produit" class="image-produit">
 
     <div class="infos-produit">
       <div class="nom-produit">
-        Shifttech T-SHIRT BLANC MANCHES COURTES MUSTARD DIJON - UNISEXE - S
+        Turbocompresseur
       </div>
       <div class="categorie-produit">Vêtements</div>
     </div>
 
-    <div class="compatibilite">N/A</div>
+
 
     <div class="quantite">
       <button class="moins">-</button>
@@ -62,11 +63,10 @@
     <button class="supprimer">×</button>
   </div>
 
-  <div class="bas-panier">
-    <div class="config-vehicule">
-      <span class="icone">🚗</span>
-      Configurer votre véhicule
+    <div class="continuer-achats">
+      <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
     </div>
+
 
     <div class="total">
       <div class="texte-calcul">Calculé à l'étape de paiemen test t</div>
@@ -84,6 +84,8 @@
 
 
 <!--Footer-->
+
+
 <footer>
   <div class="footer-container">
 
