--- a/panier.html
+++ b/panier.html
@@ -59,24 +59,25 @@
     </div>
 
     <div class="prix">60,00 €</div>
-
-    <button class="supprimer">×</button>
-  </div>
-
-    <div class="continuer-achats">
-      <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
+      <button class="supprimer">×</button>
     </div>
 
 
-    <div class="total">
-      <div class="texte-calcul">Calculé à l'étape de paiemen test t</div>
-      <div class="montant">60,00 € <span class="ttc">TTC</span></div>
-    </div>
+<div class="bas-panier">
+  <div class="continuer-achats">
+    <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
   </div>
 
-  <div class="actions">
-    <button class="payer">Aller à l'étape de paiement</button>
+  <div class="total">
+    <div class="texte-calcul">Calculé à l'étape de paiement</div>
+    <div class="montant">60,00 € <span class="ttc">TTC</span></div>
   </div>
+</div>
+
+<div class="actions">
+  <button class="payer">Aller à l'étape de paiement</button>
+</div>
+
 
 </div>
 
