--- a/panier.html
+++ b/panier.html
@@ -47,7 +47,10 @@
       <div class="nom-produit">
         Turbocompresseur
       </div>
-      <div class="categorie-produit">Vêtements</div>
+
+      <div class="categorie-produit">
+        Vêtements
+      </div>
     </div>
 
 
@@ -63,23 +66,30 @@
     </div>
 
 
-<div class="bas-panier">
-  <div class="continuer-achats">
-    <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
+    <div class="bas-panier">
+      <div class="continuer-achats">
+        <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
+      </div>
+
+      <div class="total">
+        <div class="texte-calcul">
+          Total
+        </div>
+        <div class="montant">
+          60,00 € 
+          <span class="ttc">
+            TTC
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="actions">
+      <button class="payer">Aller à l'étape de paiement</button>
+    </div>
+
+
   </div>
-
-  <div class="total">
-    <div class="texte-calcul">Calculé à l'étape de paiement</div>
-    <div class="montant">60,00 € <span class="ttc">TTC</span></div>
-  </div>
-</div>
-
-<div class="actions">
-  <button class="payer">Aller à l'étape de paiement</button>
-</div>
-
-
-</div>
 
 
 
