--- a/panier.html
+++ b/panier.html
@@ -44,11 +44,11 @@
 
     <div class="infos-produit">
       <div class="nom-produit">
-        Turbocompresseur
+        Turbocompresseur 
       </div>
 
       <div class="categorie-produit">
-        Vêtements
+        BMW M3 (F30 / F80)
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       <button class="plus">+</button>
     </div>
 
-    <div class="prix">60,00 €</div>
+    <div class="prix">899,00 €</div>
       <button class="supprimer">×</button>
     </div>
 
@@ -75,7 +75,7 @@
           Total
         </div>
         <div class="montant">
-          60,00 € 
+          901,00 € 
           <span class="ttc">
             TTC
           </span>
@@ -86,7 +86,6 @@
     <div class="actions">
       <button class="payer">Aller à l'étape de paiement</button>
     </div>
-
 
   </div>
 
