--- a/panier.html
+++ b/panier.html
@@ -86,7 +86,13 @@
      </div>
 
     <div class="actions">
-      <button class="payer">Aller à l'étape de paiement</button>
+      <div class="div-payer">
+        <button class="payer">Aller à l'étape de paiement</button>
+      </div>
+
+      <div class="continuer-achats">
+        <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
+     </div>
     </div>
 
   </div>
