--- a/panier.html
+++ b/panier.html
@@ -82,7 +82,7 @@
 
     <div class="actions">
 
-      <button class="payer">Aller à l'étape de paiement</button>
+      <button class="payer">Aller à l'étape de paiement test</button>
       <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
     </div>
 
