--- a/panier.html
+++ b/panier.html
@@ -53,7 +53,6 @@
     </div>
 
 
-
     <div class="quantite">
       <button class="moins">-</button>
       <span class="valeur">02</span>
@@ -84,7 +83,7 @@
 
       
       <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
-      <button class="payer">Aller à l'étape de paiement test</button>
+      <button class="payer">Aller à l'étape de paiement test 2</button>
     </div>
 
   </div>
