normalement c presque bon

--- a/panier.html
+++ b/panier.html
@@ -40,7 +40,7 @@
 <div class="panier">
 
   <div class="ligne-produit">
-    <img src="Dodge.png" alt="Produit" class="image-produit">
+    <img src="TurboBMW.jpg" alt="Produit" class="image-produit">
 
     <div class="infos-produit">
       <div class="nom-produit">
@@ -63,7 +63,33 @@
       <button class="supprimer">×</button>
     </div>
 
+    <!--ARTICLE 2-->
+    <div class="ligne-produit">
+      <img src="TurboBMW.jpg" alt="Produit" class="image-produit">
 
+      <div class="infos-produit">
+        <div class="nom-produit">
+          Turbocompresseur 
+        </div>
+
+      <div class="categorie-produit">
+          BMW M3 (F30 / F80)
+      </div>
+    </div>
+
+
+    <div class="quantite">
+      <button class="moins">-</button>
+      <span class="valeur">02</span>
+      <button class="plus">+</button>
+    </div>
+
+    <div class="prix">899,00 €</div>
+      <button class="supprimer">×</button>
+    </div>
+
+
+    <!-- bas du panier-->
     <div class="bas-panier">
 
       <div class="total">
@@ -80,8 +106,6 @@
     </div>
 
     <div class="actions">
-
-      
       <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
       <button class="payer">Aller à l'étape de paiement test 2</button>
     </div>
