--- a/panier.html
+++ b/panier.html
@@ -65,29 +65,53 @@
 
     <!--ARTICLE 2-->
     <div class="ligne-produit">
-      <img src="TurboBMW.jpg" alt="Produit" class="image-produit">
+      <img src="InjecteurBMW.jpg" alt="Produit" class="image-produit">
 
       <div class="infos-produit">
         <div class="nom-produit">
-          Turbocompresseur 
+          Injecteurs performance
         </div>
 
       <div class="categorie-produit">
-          BMW M3 (F30 / F80)
+          BMW M3 
       </div>
     </div>
 
 
     <div class="quantite">
       <button class="moins">-</button>
-      <span class="valeur">02</span>
+      <span class="valeur">06</span>
       <button class="plus">+</button>
     </div>
 
-    <div class="prix">899,00 €</div>
+    <div class="prix">168,00 €</div>
       <button class="supprimer">×</button>
     </div>
 
+    <!--ARTICLE 3-->
+    <div class="ligne-produit">
+      <img src="RadiateurBMW.jpg" alt="Produit" class="image-produit">
+
+      <div class="infos-produit">
+        <div class="nom-produit">
+          Radiateur en alu
+        </div>
+
+      <div class="categorie-produit">
+          BMW M3 
+      </div>
+    </div>
+
+
+    <div class="quantite">
+      <button class="moins">-</button>
+      <span class="valeur">01</span>
+      <button class="plus">+</button>
+    </div>
+
+    <div class="prix">349,00 €</div>
+      <button class="supprimer">×</button>
+    </div>
 
     <!-- bas du panier-->
     <div class="bas-panier">
