--- a/panier.html
+++ b/panier.html
@@ -39,6 +39,9 @@
 
 <div class="panier">
 
+
+  <!--ARTICLE 1-->
+
   <div class="ligne-produit">
     <img src="TurboBMW.jpg" alt="Produit" class="image-produit">
 
@@ -52,7 +55,6 @@
       </div>
     </div>
 
-
     <div class="quantite">
       <button class="moins">-</button>
       <span class="valeur">02</span>
@@ -64,6 +66,7 @@
     </div>
 
     <!--ARTICLE 2-->
+
     <div class="ligne-produit">
       <img src="InjecteurBMW.jpg" alt="Produit" class="image-produit">
 
@@ -77,7 +80,6 @@
       </div>
     </div>
 
-
     <div class="quantite">
       <button class="moins">-</button>
       <span class="valeur">06</span>
@@ -89,6 +91,7 @@
     </div>
 
     <!--ARTICLE 3-->
+
     <div class="ligne-produit">
       <img src="RadiateurBMW.jpg" alt="Produit" class="image-produit">
 
@@ -102,7 +105,6 @@
       </div>
     </div>
 
-
     <div class="quantite">
       <button class="moins">-</button>
       <span class="valeur">01</span>
@@ -113,7 +115,11 @@
       <button class="supprimer">×</button>
     </div>
 
+
+
     <!-- bas du panier-->
+
+    
     <div class="bas-panier">
 
       <div class="total">
@@ -131,11 +137,10 @@
 
     <div class="actions">
       <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
-      <button class="payer">Aller à l'étape de paiement test 2</button>
+      <button class="payer">Aller à l'étape de paiement</button>
     </div>
 
   </div>
-
 
 
 
