--- a/panier.html
+++ b/panier.html
@@ -119,7 +119,7 @@
 
     <!-- bas du panier-->
 
-    
+
     <div class="bas-panier">
 
       <div class="total">
@@ -137,7 +137,7 @@
 
     <div class="actions">
       <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
-      <button class="payer">Aller à l'étape de paiement</button>
+      <button class="payer" onclick="alert('Une erreur est survenue')">Aller à l'étape de paiement</button>
     </div>
 
   </div>
