--- a/panier.html
+++ b/panier.html
@@ -137,7 +137,7 @@
 
     <div class="actions">
       <a href="boutique.html" class="btn-continuer">Continuer mes achats</a>
-      <button class="payer" onclick="alert('Une erreur est survenue')">Aller à l'étape de paiement</button>
+      <button class="payer" onclick="alert('Une erreur est survenue au moment du paiement... Veuillez réessayer.')">Aller à l'étape de paiement</button>
     </div>
 
   </div>
