--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 </head>
 
 
+<body>
 <header class="site-header">
   <div class="logo">
-    <a href="index.html">
-      <img src="logoSite.png" alt="Logo Power Auto">
-    </a>
+    <img src="logoSite.png" alt="Logo Power Auto">
     <span class="brand-name">Power Auto</span>
   </div>
 
@@ -74,7 +73,7 @@
   </div>
 
   <div class="piece-image">
-    <img src="pieceAutoperf" alt="Pièce automobile">
+    <img src="pieceAutoperf.png" alt="Pièce automobile">
   </div>
 </section>
 
