--- a/boutique.html
+++ b/boutique.html
@@ -39,7 +39,7 @@
   
   <section class="shop-hero">
       <div class="shop-hero-bg">
-    <img src="BoutiqueFond.jpg">
+    <img src="BoutiqueFond.jpg" alt="Voiture BMW">
   </div>
 
   <div class="shop-hero-content">
@@ -124,4 +124,3 @@
 <script src="boutique.js"></script>
 </body>
 </html>
-
