--- a/index.html
+++ b/index.html
@@ -13,26 +13,29 @@
 </head>
 
 <body>
-  <header class="site-header">
-    <div class="logo">
+<header class="site-header">
+  <div class="logo">
+    <a href="index.html">
       <img src="logoSite.png" alt="Logo Power Auto">
-      <span class="brand-name">Power Auto</span>
-    </div>
+    </a>
+    <span class="brand-name">Power Auto</span>
+  </div>
 
-    <input type="checkbox" id="burger-toggle">
-    <label for="burger-toggle" class="burger" aria-label="Menu">
-      <span></span><span></span><span></span>
-    </label>
+  <input type="checkbox" id="burger-toggle">
+  <label for="burger-toggle" class="burger" aria-label="Menu">
+    <span></span><span></span><span></span>
+  </label>
 
-    <nav class="nav-menu">
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Accueil</a></li>
-        <li><a href="boutique.html">Boutique</a></li>
-        <li><a href="panier.html">Panier</a></li>
-        <li><a href="apropos.html">À propos</a></li>
-      </ul>
-    </nav>
-  </header>
+  <nav class="nav-menu">
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="boutique.html">Boutique</a></li>
+      <li><a href="panier.html">Panier</a></li>
+      <li><a href="apropos.html">À propos</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main>
     <section class="hero">
