--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="hero">
 
       <video autoplay muted loop playsinline class="background-video">
-        <source src="https://github.com/zacharia140/PowerAuto/releases/download/v1.0-video/Zachdream_fixed.mp4" type="video/mp4">
+        <source src="https://github.com/zacharia140/PowerAuto/releases/download/v1.0-video/Zachdream.mp4" type="video/mp4">
       </video>
 
   
