--- a/apropos.html
+++ b/apropos.html
@@ -55,11 +55,11 @@
         <strong>Mehdi</strong> et <strong>Zackaria</strong>.
       </p>
       <p>
-        Ensemble, nous avons remarqué que les conducteurs peinaient à trouver des pièces de qualité à prix raisonnable.
-        C’est de ce constat qu’est née notre idée : rendre l’entretien automobile plus simple, plus rapide, et surtout plus abordable pour tous.
+        Ensemble, nous avons constaté que les passionnés d’automobile avaient du mal à trouver des pièces de qualité performance fiables et à prix raisonnable.
+        rendre la préparation et l’optimisation des véhicules plus simples, plus rapides et plus accessibles pour tous, et surtout plus abordable pour tous.
       </p>
       <p>
-        Aujourd’hui, Power Auto s’impose comme une référence dans la vente en ligne de pièces détachées, grâce à notre service client réactif, notre logistique maîtrisée et notre engagement envers la satisfaction des automobilistes.
+        Aujourd’hui, Power Auto s’impose comme une référence dans la vente en ligne de pièces de performance, grâce à notre service client réactif, notre logistique maîtrisée et notre engagement à offrir le meilleur aux conducteurs en quête de puissance et de qualité.
       </p>
     </section>
 
