--- a/apropos.html
+++ b/apropos.html
@@ -52,7 +52,7 @@
       <p>
         <strong>Power Auto</strong> est née le <span id="creation-date">12 mars 2020</span> 
         grâce à quatre amis passionnés : <strong>Ayoub</strong>, <strong>Samih</strong>, 
-        <strong>Mehdi</strong> et <strong>Zackaria</strong>.
+        <strong>Mehdi</strong> et <strong>Zacharia</strong>.
       </p>
       <p>
         Ensemble, nous avons constaté que les passionnés d’automobile avaient du mal à trouver des pièces de qualité performance fiables et à prix raisonnable.
