--- a/apropos.html
+++ b/apropos.html
@@ -55,7 +55,7 @@
         <strong>Mehdi</strong> et <strong>Zacharia</strong>.
       </p>
       <p>
-        Ensemble, nous avons constaté que les passionnés d’automobile avaient du mal à trouver des pièces de qualité performance fiables et à prix raisonnable.
+        Ensemble, nous avons constaté que les passionnés d’automobile avaient du mal à trouver des pièces de performance fiables et à prix raisonnable.
         rendre la préparation et l’optimisation des véhicules plus simples, plus rapides et plus accessibles pour tous, et surtout plus abordable pour tous.
       </p>
       <p>
