--- a/apropos.html
+++ b/apropos.html
@@ -56,7 +56,7 @@
       </p>
       <p>
         Ensemble, nous avons constaté que les passionnés d’automobile avaient du mal à trouver des pièces de performance fiables et à prix raisonnable.
-        rendre la préparation et l’optimisation des véhicules plus simples, plus rapides et plus accessibles pour tous, et surtout plus abordable pour tous.
+        C’est de ce constat qu’est née notre idée : rendre la préparation et l’optimisation des véhicules plus simples, plus rapides et plus accessibles pour tous, et surtout plus abordable pour tous.
       </p>
       <p>
         Aujourd’hui, Power Auto s’impose comme une référence dans la vente en ligne de pièces de performance, grâce à notre service client réactif, notre logistique maîtrisée et notre engagement à offrir le meilleur aux conducteurs en quête de puissance et de qualité.
